Fix horizontal scroll on Windows (#53)
* fix horizontal scroll on windows

* Sort property

--- a/packages/material/styles/shower/shower-list.css
+++ b/packages/material/styles/shower/shower-list.css
@@ -15,6 +15,7 @@
         var(--shower-list-block)
         var(--shower-list-inline);
 
+    overflow-x: hidden;
     box-sizing: border-box;
     width: 100%;
     display: grid;
